--- a/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-making-a-custom-component-editable-in-the-site-editor.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-making-a-custom-component-editable-in-the-site-editor.mdx
@@ -95,7 +95,7 @@ The functional component `CustomComponent` takes an object with `title` and `sub
 
 ---
 
-**Default props**
+**Default props definition**
   
 The `defaultProps` specifies the default values for the props of the `CustomComponent`. If the user does not define props in the Site Editor, the `defaultProps` values will be returned.
 
@@ -111,9 +111,9 @@ The `schema` defines the structure and types of the props, allowing the componen
 ```tsx react/CustomComponent/index.tsx focus=22:37
 ```
 
----
-
 >ℹ️ Ensure you define the `defaultProps` and `schema` objects for the component in [JSON Schema](https://json-schema.org/) format, a declarative language that provides a standardized way to describe and validate JSON data.
+
+---
 
 </CH.Scrollycoding>
 
