--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -18,14 +18,14 @@ Check out below a list of FastStore native sections, their components that can b
 > ⚠️ Components prefixed with `__experimental` indicate that they can be overridden. However, their props are not accessible. **We do not recommend** overriding these components unless it is necessary.
 
 <details>
-<summary><b>Alert</b></summary>
+### Alert
 
 | Type                              | Availability                                                                                                           |
 | --------------------------------- | ---------------------------------------------------------------------------------------------------------------------- |
 | Overridable components            | <ul className="doc-list"><li>[`Alert`](https://developers.vtex.com/docs/guides/faststore/molecules-alert)</li><li>[`Icon`](https://developers.vtex.com/docs/guides/faststore/reference-icons)</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li> `Icon`</li><li> `dismissible`</li></ul>                                                  |
 
-### Available schema 
+<p><b>Available schema</p></b> 
 Check the available Headless CMS schema that you can customize for this component:
 
 ```json
