--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -18,7 +18,7 @@ Check out below a list of FastStore native sections, their components that can b
 > ⚠️ Components prefixed with `__experimental` indicate that they can be overridden. However, their props are not accessible. **We do not recommend** overriding these components unless it is necessary.
 
 <details>
-### Alert
+<summary><b>Alert</b></summary>
 
 | Type                              | Availability                                                                                                           |
 | --------------------------------- | ---------------------------------------------------------------------------------------------------------------------- |
