--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -34,7 +34,7 @@ Check the available Headless CMS schema that you can customize for this componen
     "name": "NewSectionName",
     "schema": {
       "title": "Add the Section name",
-      "description": "Short description for the the section's purpose",
+      "description": "Short description for the section's purpose",
       "type": "object",
       "required": ["icon", "content", "dismissible"],
       "properties": {
