--- a/docs/faststore/docs/getting-started/3-faststore-cli.mdx
+++ b/docs/faststore/docs/getting-started/3-faststore-cli.mdx
@@ -2,13 +2,13 @@
 title: '3. FastStore CLI'
 ---
 
-The FastStore Command Line Interface (CLI) is the main pre-configured tool for initializing, building and developing FastStore projects.
+The FastStore Command Line Interface (CLI) is the main pre-configured tool for initializing, building, and developing FastStore projects.
 
-Also the CLI is the responsible on keeping the stores up-to-date with the [`@faststore/core`](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#faststorecore) package and enables the cloud platform to understand the FastStore project.
+Also, the CLI is responsible for keeping the stores up-to-date with the [`@faststore/core`](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#faststorecore) package and enabling the cloud platform to understand the FastStore project.
 
 ---
 
-## Runnig FastStore CLI on the project
+## Running FastStore CLI on the project
 
 The CLI is a dependency in the `package.json` file of the FastStore project, so once you run `yarn install` during the [set up of the project](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project) you can start using it on the project.
 
@@ -19,7 +19,7 @@ The CLI is a dependency in the `package.json` file of the FastStore project, so 
 Starts the project in the development environment and usually servers it at `http://localhost:3000`. It allows you to make changes to the project and see the results in real-time locally on your machine without affecting the production environment.
 
 ```bash
-  yarn dev
+yarn dev
 ```
 
 #### `build`
@@ -27,7 +27,7 @@ Starts the project in the development environment and usually servers it at `htt
 Generates a store in the production environment by compiling the project and optimizing it for production usage.
 
 ```bash
-  yarn build
+yarn build
 ```
 
 #### `start`
@@ -35,25 +35,25 @@ Generates a store in the production environment by compiling the project and opt
 Executes a Next.js project in the root directory and usually servers it at `http://localhost:3000`.
 
 ```bash
-  yarn start
+yarn start
 ```
 
 #### `cms-sync`
 
-Sync your FastStore repository cms folder changes with the Headless CMS app.
+Sync changes within the `cms` folder of your FastStore project with the Headless CMS app.
 
 ```bash
-  yarn cms-sync
+yarn cms-sync
 ```
 
 ---
 
 ## Installing FastStore CLI globally using `npm`
 
-Installing the CLI via `npm` allows you to use its commands in your machine. To install [`@faststore/cli`](https://www.npmjs.com/package/@faststore/cli) package, run the following in the terminal:
+Installing the CLI via `npm` allows you to use its commands on your machine. To install [`@faststore/cli`](https://www.npmjs.com/package/@faststore/cli) package, run the following in the terminal:
 
 ```bash
-  npm install -g @faststore/cli
+npm install -g @faststore/cli
 ```
 
 ### Commands
@@ -61,29 +61,29 @@ Installing the CLI via `npm` allows you to use its commands in your machine. To 
 #### `dev`
 
 ```bash
-  faststore dev
+faststore dev
 ```
 
 #### `build`
 
 ```bash
-  faststore build
+faststore build
 ```
 
 #### `start`
 
 ```bash
-  faststore start
+faststore start
 ```
 
 #### `cms-sync`
 
 ```bash
-  faststore cms-sync
+faststore cms-sync
 ```
 
 #### `help`
 
 ```bash
-  yarn faststore help [COMMAND] [-n]
+yarn faststore help [COMMAND] [-n]
 ```
