Bulked update: add hCMS schemas

--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -25,7 +25,7 @@ Check out below a list of FastStore native sections, their components that can b
 | Headless CMS: props customization | <ul className="doc-list"><li> `Icon`</li><li> `dismissible`</li></ul>                                                  |
 
 <details>
-<summary><b>Available schema</b></summary>
+<summary><b>Alert - Available schema</b></summary>
 
 Check the available Headless CMS schema that you can customize for this component:
 
@@ -72,15 +72,18 @@ Check the available Headless CMS schema that you can customize for this componen
 
 </details>
 
-<details>
-<summary><b>BannerText</b></summary>
+---
+
+### BannerText
 
 | Type                              | Availability                                                                                                                                                                   |
 | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | Overridable components            | <ul className="doc-list"><li> [`BannerText`](https://developers.vtex.com/docs/guides/faststore/organisms-banner-text)</li> <li> [`BannerTextContent`](https://developers.vtex.com/docs/guides/faststore/organisms-banner-text#banner-text-content)</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li> `ColorVariant`</li><li> `Variant`</li></ul>                                                                                                      |
 
-### Available schema 
+<details>
+<summary><b>BannerText - Available schema</b></summary> 
+
 Check the available Headless CMS schema that you can customize for this component:
 
 ```json
@@ -139,15 +142,18 @@ Check the available Headless CMS schema that you can customize for this componen
 ```
 </details>
 
-<details>
-<summary><b>Breadcrumb</b></summary>
+---
+
+### breadcrumb
 
 | Type                              | Availability                                                                                                                     |
 | --------------------------------- | -------------------------------------------------------------------------------------------------------------------------------- |
 | Overridable components            | <ul className="doc-list"><li>[`Breadcrumb`](https://developers.vtex.com/docs/guides/faststore/molecules-breadcrumb)</li><li>[`Icon`](https://developers.vtex.com/docs/guides/faststore/atoms-icon)</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li>`Icon (HomeIcon)`</li></ul>                                                                         |
 
-### Available schema 
+<details>
+<summary><b>Breadcrumb - Available schema</b></summary> 
+
 Check the available Headless CMS schema that you can customize for this component:
 
 ```json
@@ -177,15 +183,18 @@ Check the available Headless CMS schema that you can customize for this componen
 
 </details>
 
-<details>
-<summary><b>Hero</b></summary>
+---
+
+### Hero
 
 | Type                              | Availability                                                                                                                                                                                             |
 | --------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | Overridable Components            | <ul className="doc-list"><li> [`Hero`](https://developers.vtex.com/docs/guides/faststore/organisms-hero)</li><li> [`HeroImage`](https://developers.vtex.com/docs/guides/faststore/organisms-hero#heroimage)</li><li> [`HeroHeader`](https://developers.vtex.com/docs/guides/faststore/organisms-hero#heroheader)</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li> `ButtonProps (Label, Icon)`</li><li> `ColorVariant`</li><li> `Variant`</li></ul>                                                                                           |
 
-### Available schema 
+<details>
+<summary><b>Hero - Available schema</b></summary> 
+
 Check the available Headless CMS schema that you can customize for this component:
 
 ```json
@@ -244,15 +253,18 @@ Check the available Headless CMS schema that you can customize for this componen
 
 </details>
 
-<details>
-<summary><b>Navbar</b></summary>
+---
+
+### Navbar
 
 | Type | Availability |
 | --------------------------------- | --------------------------------------------------------------------------------------------------------------------------------- |
 | Overridable components | <ul className="doc-list"><li> [`Navbar`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar)</li> <li> [`NavbarLinks`](https://developers.vtex.com/docs/guides/faststore/molecules-navbar-links)</li> <li> [`NavbarLinksList`](https://developers.vtex.com/docs/guides/faststore/molecules-navbar-links#navbar-links-list)</li> <li> [`NavbarSlider`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider)</li> <li> [`NavbarSliderHeader`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider#navbar-slider-header)</li> <li> [`NavbarSliderContent`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider#navbar-slider-content)</li> <li> [`NavbarSliderFooter`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar-slider#navbar-slider-content)</li> <li> [`NavbarHeader`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar#navbar-header)</li> <li> [`NavbarRow`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar#navbar-row)</li> <li> [`NavbarButtons`](https://developers.vtex.com/docs/guides/faststore/organisms-navbar#navbar-buttons)</li> <li>[`IconButton`](https://developers.vtex.com/docs/guides/faststore/molecules-icon-button)</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li>NavbarRow: `Logo`</li><li>NavbarButtons: `SignIn Button Icon`, `Cart Icon`</li><li>Navigation: `Regionalization Icon`, `Menu Icon`, `Home Icon`</li></ul> |
 
-### Available schema 
+<details>
+<summary><b>Navbar - Available schema</b></summary> 
+
 Check the available Headless CMS schema that you can customize for this component:
 
 ```json
@@ -467,8 +479,9 @@ Check the available Headless CMS schema that you can customize for this componen
 
 </details>
 
-<details>
-<summary><b>Newsletter</b></summary>
+---
+
+### Newsletter
 
 | Type                              | Availability                                                                                                                                                                           |
 | --------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -476,7 +489,8 @@ Check the available Headless CMS schema that you can customize for this componen
 | Overridable components            | <ul className="doc-list"><li> `ToastIconSuccess`</li> <li> `ToastIconError`</li> <li> `HeaderIcon`</li> <li> `InputFieldName`</li> <li> `InputFieldEmail`</li> <li> `Button`</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li> `Icon`</li><li> `Variant (Lite / Full)`</li></ul>                                                                                                        |
 
-### Available schema 
+<details>
+<summary><b>Newsletter - Available schema</b></summary> 
 Check the available Headless CMS schema that you can customize for this component:
 
 ```json
@@ -616,17 +630,18 @@ Check the available Headless CMS schema that you can customize for this componen
 
 </details>
 
-<details>
-<summary>
-  <b>ProductDetails</b>
-</summary>
+---
+
+### Product Details
 
 | Type                              | Availability                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
 | --------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | Overridable components            | <ul className="doc-list"><li>[`ProductTitle`](https://developers.vtex.com/docs/guides/faststore/molecules-product-title)</li><li>[`DiscountBadge`](https://developers.vtex.com/docs/guides/faststore/molecules-discount-badge)</li><li>[`BuyButton`](https://developers.vtex.com/docs/guides/faststore/molecules-buy-button)</li><li>[`Icon`](https://developers.vtex.com/docs/guides/faststore/atoms-icon)</li><li>[`Price`](https://developers.vtex.com/docs/guides/faststore/atoms-price)</li><li>[`QuantitySelector`](https://developers.vtex.com/docs/guides/faststore/molecules-quantity-selector)</li><li>[`SkuSelector`](https://developers.vtex.com/docs/guides/faststore/molecules-sku-selector)</li><li>[`ShippingSimulation`](https://developers.vtex.com/docs/guides/faststore/organisms-shipping-simulation)</li><li>[`ImageGallery`](https://developers.vtex.com/docs/guides/faststore/organisms-image-gallery)</li><li>[`ImageGalleryViewer`](https://developers.vtex.com/docs/guides/faststore/organisms-image-gallery)</li><li> `__experimentalImageGalleryImage`</li><li> `__experimentalImageGallery`</li><li> `__experimentalShippingSimulation`</li><li> `__experimentalProductDetailsSettings`</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li>ProductTitle: `showDiscountBadge`, `discountBadgeSize`, `showReferenceNumber`</li><li>BuyButton: `Icon`</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
 
-### Available schema 
+<details>
+<summary><b>Product Details - Available schema</b></summary> 
+
 Check the available Headless CMS schema that you can customize for this component:
 
 ```json
@@ -767,15 +782,18 @@ Check the available Headless CMS schema that you can customize for this componen
 
 </details>
 
-<details>
-<summary><b>ProductShelf</b></summary>
+---
+
+### Product Shelf
 
 | Type                              | Availability                                                                                                                                                         |
 | --------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | Overridable components            | <ul className="doc-list"><li> [`ProductShelf`](https://developers.vtex.com/docs/guides/faststore/organisms-product-shelf)</li><li> `__experimentalCarousel`</li><li> `__experimentalProductCard`</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li>Product Card Configuration: `showDiscountBadge`, `bordered`</li></ul>                                                                   |
 
-### Available schema 
+<details>
+<summary><b>Product Shelf - Available schema</b></summary> 
+
 Check the available Headless CMS schema that you can customize for this component:
 
 ```json
@@ -879,8 +897,9 @@ Check the available Headless CMS schema that you can customize for this componen
 
 </details>
 
-<details>
-<summary><b>ProductGallery</b></summary>
+---
+
+### Product Gallery
 
 | Type                              | Availability                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
@@ -888,7 +907,9 @@ Check the available Headless CMS schema that you can customize for this componen
 | Overridable components            | <ul className="doc-list"><li> `MobileFilterButton` [(Button)](https://developers.vtex.com/docs/guides/faststore/atoms-button)</li><li> `FilterIcon` [(Icon)](https://developers.vtex.com/docs/guides/faststore/atoms-icon)</li><li> `PrevIcon` [(Icon)](https://developers.vtex.com/docs/guides/faststore/atoms-icon)</li><li> `ResultsCountSkeleton` [(Skeleton)](https://developers.vtex.com/docs/guides/faststore/atoms-skeleton)</li><li> `SortSkeleton` [(Skeleton)](https://developers.vtex.com/docs/guides/faststore/atoms-skeleton)</li><li> `FilterButtonSkeleton` [(Skeleton)](https://developers.vtex.com/docs/guides/faststore/atoms-skeleton)</li><li> `LinkButtonPrev` [(LinkButton)](https://developers.vtex.com/docs/guides/faststore/molecules-link-button)</li><li> `LinkButtonNext` [(LinkButton)](https://developers.vtex.com/docs/guides/faststore/molecules-link-button)</li><li> `__experimentalFilterDesktop`</li><li> `__experimentalFilterSlider`</li><li> `__experimentalProductCard`</li><li> `__experimentalEmptyGallery`</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li>Previous Page Button: `Icon`</li><li>Mobile Filter Button: `Icon`</li><li>Product Card Configuration: `showDiscountBadge`, `bordered`</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 
-### Available schema 
+<details>
+<summary><b>Product Gallery - Available schema</b></summary> 
+
 Check the available Headless CMS schema that you can customize for this component:
 
 ```json
@@ -1093,15 +1114,18 @@ Check the available Headless CMS schema that you can customize for this componen
 
 </details>
 
-<details>
-<summary><b>RegionBar</b></summary>
+---
+
+### Region Bar
 
 | Type                              | Availability                                                                                                                                                                                           |
 | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | Overridable components            | <ul className="doc-list"><li>[`RegionBar`](https://developers.vtex.com/docs/guides/faststore/molecules-region-bar)</li><li> `LocationIcon` [(Icon)](https://developers.vtex.com/docs/guides/faststore/atoms-icon)</li><li> `ButtonIcon` [(Icon)](https://developers.vtex.com/docs/guides/faststore/atoms-icon)</li></ul> |
 | Headless CMS: props customization | <ul className="doc-list"><li>LocationIcon: `Icon`</li><li>ButtonIcon: `Icon`</li></ul>                                                                                                                 |
 
-### Available schema 
+<details>
+<summary><b>Region Bar - Available schema</b></summary>
+
 Check the available Headless CMS schema that you can customize for this component:
 
 ```json
