--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -144,7 +144,7 @@ Check the available Headless CMS schema that you can customize for this componen
 
 ---
 
-### breadcrumb
+### Breadcrumb
 
 | Type                              | Availability                                                                                                                     |
 | --------------------------------- | -------------------------------------------------------------------------------------------------------------------------------- |
