--- a/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-making-a-custom-component-editable-in-the-site-editor.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-making-a-custom-component-editable-in-the-site-editor.mdx
@@ -13,12 +13,10 @@ In this guide, you will learn how to configure the schema definitions in your co
 
 ## Before you begin
 
-Ensure your store has a [Store Theme](https://developers.vtex.com/docs/guides/vtex-io-documentation-store-theme) developed with [VTEX IO](https://developers.vtex.com/docs/guides/vtex-io-documentation-what-is-vtex-io) and [Store Framework](https://developers.vtex.com/docs/guides/store-framework), according to the [Storefront](https://developers.vtex.com/docs/guides/getting-started-3) guide.
-
-Check if the [Builders](https://developers.vtex.com/docs/guides/vtex-io-documentation-builders) are properly installed in your Store Theme. You must have at least the following builders configured:
-
-- [store builder](https://developers.vtex.com/docs/guides/vtex-io-documentation-store-builder): Enables the development of Store Framework storefronts.
-- [react builder](https://developers.vtex.com/docs/guides/vtex-io-documentation-react-builder): Used to develop apps with [React](https://react.dev/) when your project requires customized frontend solutions. 
+- Ensure your store has a [Store Theme](https://developers.vtex.com/docs/guides/vtex-io-documentation-store-theme) developed with [VTEX IO](https://developers.vtex.com/docs/guides/vtex-io-documentation-what-is-vtex-io) and [Store Framework](https://developers.vtex.com/docs/guides/store-framework), according to the [Storefront](https://developers.vtex.com/docs/guides/getting-started-3) guide.
+- Check if the [Builders](https://developers.vtex.com/docs/guides/vtex-io-documentation-builders) are properly installed in your Store Theme. You must have at least the following builders configured:
+    - [store builder](https://developers.vtex.com/docs/guides/vtex-io-documentation-store-builder): Enables the development of Store Framework storefronts.
+    - [react builder](https://developers.vtex.com/docs/guides/vtex-io-documentation-react-builder): Allows developing [React](https://react.dev/) frontend components. 
 
 ## Step by step
 
