--- a/docs/faststore/docs/customization/dynamic-content/consuming-the-dynamic-content-in-custom-sections.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/consuming-the-dynamic-content-in-custom-sections.mdx
@@ -4,6 +4,10 @@ title: 'Consuming the Dynamic Content in custom sections'
 
 After [mapping pages and data-fetching functions](LINK) and choosing one of the methods for [creating Dynamic Content via API fetching](LINK), use the data to render it in a store section. In this step, we will create a new Hero section, placed on a landing page, to render the image from the data.
 
+| *Before*: Using [Hero](https://developers.vtex.com/docs/guides/faststore/organisms-hero) native section with an image uploaded from the Headless CMS. | *After:* Using a custom Hero section fetching the image content from an API. |
+| ----------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------- |
+| ![without-dynamic-content](https://vtexhelp.vtexassets.com/assets/docs/src/without-dynamic-content___9e65e7a095029f020fe64599348b695a.png) | ![with-dynamic-content](https://vtexhelp.vtexassets.com/assets/docs/src/dynamic-content-new-section___82b343ceeef6504de8bdf7233f30d199.png) |
+
 ### 1. Creating the section
 
 Create and display a [section](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section) for the Dynamic Content. For this tutorial, we’ll create a [Hero](https://developers.vtex.com/docs/guides/faststore/organisms-hero).
