--- a/docs/faststore/docs/customization/dynamic-content/overview.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/overview.mdx
@@ -4,6 +4,8 @@ title: 'Dynamic Content'
 
 Dynamic Content allows you to customize your home and landing pages with server-side data fetching using FastStore. This feature improves performance and SEO by dynamically displaying fetched data in store sections on these pages.
 
+![dynamic-content-headless-cms](https://vtexhelp.vtexassets.com/assets/docs/src/dynamic-content-feature___31dbd2fb1003d00bf492eb6479e3fe0c.gif)
+
 > ℹ️ For other types of pages, such as collections (PLPs) and product pages (PDPs), server-side data fetching is already available via API Extensions. Refer to the [API Extension documentation](https://developers.vtex.com/docs/guides/faststore/api-extensions-overview) for more details on fetching data for these pages.
 
 ## Before you begin
