--- a/docs/faststore/docs/customization/dynamic-content/consuming-the-dynamic-content-in-custom-sections.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/consuming-the-dynamic-content-in-custom-sections.mdx
@@ -2,7 +2,7 @@
 title: 'Consuming the Dynamic Content in custom sections'
 ---
 
-After [mapping pages and data-fetching functions](LINK) and choosing one of the methods for [creating Dynamic Content via API fetching](LINK), use the data to render it in a store section. In this step, we will create a new Hero section, placed on a landing page, to render the image from the data.
+After [mapping pages and data-fetching functions](https://developers.vtex.com/docs/guides/faststore/dynamic-content-setting-up-the-store-code-for-dynamic-content#step-1-mapping-pages-and-data-fetching-functions) and choosing one of the methods for [creating Dynamic Content via API fetching](https://developers.vtex.com/docs/guides/faststore/dynamic-content-setting-up-the-store-code-for-dynamic-content#step-2-creating-dynamic-content-via-api-fetching), use the data to render it in a store section. In this step, we will create a new Hero section, placed on a landing page, to render the image from the data.
 
 | *Before*: Using [Hero](https://developers.vtex.com/docs/guides/faststore/organisms-hero) native section with an image uploaded from the Headless CMS. | *After:* Using a custom Hero section fetching the image content from an API. |
 | ----------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------- |
