--- a/docs/faststore/docs/customization/dynamic-content/overview.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/overview.mdx
@@ -6,6 +6,8 @@ Dynamic Content allows you to customize your home and landing pages with server-
 
 ![dynamic-content-headless-cms](https://vtexhelp.vtexassets.com/assets/docs/src/dynamic-content-feature___31dbd2fb1003d00bf492eb6479e3fe0c.gif)
 
+*This video guides you on creating a landing page in your Headless CMS and using Dynamic Content on it. In this example, we've already set up the dynamic content in the store code, including the page slug, `/my-landing-page`. The landing page features two Hero sections: a [native one](https://developers.vtex.com/docs/guides/faststore/organisms-hero) displaying an image added from the Headless CMS, and a custom one with a fixed image sourced directly from an API defined in the store code.*
+
 > ℹ️ For other types of pages, such as collections (PLPs) and product pages (PDPs), server-side data fetching is already available via API Extensions. Refer to the [API Extension documentation](https://developers.vtex.com/docs/guides/faststore/api-extensions-overview) for more details on fetching data for these pages.
 
 ## Before you begin
